added success and error args to geolocation

--- a/src/scss/demo.scss
+++ b/src/scss/demo.scss
@@ -76,14 +76,14 @@ img {
     position: relative;
 }
 
-.static-img {
+.static-img-container {
     margin: 0;
     text-align: center;
+}
 
-    img {
-        border: 2px solid #222;
-        opacity: .75;
-    }
+.static-img {
+    border: 2px solid #222;
+    opacity: .75;
 }
 
 .message {
